syntax = "proto3";

package v1;

option go_package = "./;v1";

import "google/api/annotations.proto";
import "src/protos/v1/api_response.proto";

message User {
    string username = 1;
    string password = 2;
    string role = 3;
}

message CreateUserRequest {
    string api = 1;
    User user = 2;
}

message CreateUserResponse {
   Response response = 1;
}

message UpdateUserRequest {
    string api = 1;
    string username = 2;
    User user = 3;
}

message UpdateUserResponse {
    Response response = 1;
}

message DeleteUserRequest {
    string api = 1;
    string username = 2;
}

message DeleteUserResponse {
    Response response = 1;
}

message GetUserRequest {
string username = 1;
}

message GetUserResponse {
    string api = 1;
    User user = 2;
}

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/user"
            body: "*"
        };
    }

    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            put: "/v1/user/{username}"
            body:"*"
        };
    }

    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) = {
            delete: "/v1/user/{username}"
            
        };
    }

    rpc GetUser (GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/v1/user/{username}"
        };
    }
}